Connection string upldated

--- a/Adra-BE/Adra.Api/appsettings.Development.json
+++ b/Adra-BE/Adra.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=JKIT-ABDULLAHM;Initial Catalog=adra;Integrated Security=true;"
+    //"DefaultConnection": "Data Source=JKIT-ABDULLAHM;Initial Catalog=adra;Integrated Security=true;"
+    "DefaultConnection": "Server=tcp:adra.database.windows.net,1433;Initial Catalog=ac-balance-tool;Persist Security Info=False;User ID=abdullah;Password=Assignment@99x;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
