--- a/Adra-BE/Adra.Api/Adra.Api.csproj
+++ b/Adra-BE/Adra.Api/Adra.Api.csproj
@@ -7,16 +7,19 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.16">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.16" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Adra.Authz\Adra.Authz.csproj" />
     <ProjectReference Include="..\Adra.Data\Adra.Data.csproj" />
     <ProjectReference Include="..\Adra.Domain\Adra.Domain.csproj" />
     <ProjectReference Include="..\Adra.Infrastructure\Adra.Infrastructure.csproj" />
