--- a/Adra-BE/Adra.Api/appsettings.json
+++ b/Adra-BE/Adra.Api/appsettings.json
@@ -7,5 +7,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"DefaultConnection": "Data Source=JKIT-ABDULLAHM;Initial Catalog=adra;Integrated Security=true;"
+    "DefaultConnection": "Server=tcp:adra.database.windows.net,1433;Initial Catalog=ac-balance-tool;Persist Security Info=False;User ID=abdullah;Password=Assignment@99x;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
